# claude-sdk-agent-fleet

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  secrets-scan.yml
docs/: OVERVIEW.md  catalog-boundary.md  pipeline.md
src/agent-fleet/: pyproject.toml
src/agent-fleet-api/: pyproject.toml
src/agent-fleet-api/src/agent_fleet_api/: app.py  deps.py  models.py  routes.py  schema.py
src/agent-fleet-mcp/: pyproject.toml
src/agent-fleet-mcp/src/agent_fleet_mcp/: pool_server.py
src/agent-fleet/src/agent_fleet/: __init__.py  main.py  settings.py
src/agent-fleet/src/agent_fleet/engine/: __init__.py  acquire_tool.py  compose.py  dispatch.py  efficiency.py  emit.py  findings_tool.py  naming.py  orchestrate.py  pipeline.py  pool.py  render.py  select.py  source.py
src/agent-fleet/src/agent_fleet/models/: __init__.py
src/agent-fleet/src/agent_fleet/models/agent/: __init__.py  pool.py  prompt.py  request.py  spec.py  thinking.py  types.py
src/agent-fleet/src/agent_fleet/router/: __init__.py  capability.py  mcp_server.py
src/agent_fleet/: __init__.py  settings.py
src/agent_fleet/engine/: compose.py  efficiency.py  orchestrate.py  pipeline.py  pool.py  render.py  run.py  select.py
src/agent_fleet/models/agent/: pool.py  prompt.py  spec.py  types.py
src/agent_fleet/router/: capability.py  mcp_server.py
src/agent_fleet/runtime/: __init__.py  capture.py  models.py  pool.py
src/agent_fleet_api/: __init__.py  app.py  deps.py  settings.py  types.py
src/agent_fleet_mcp/: __init__.py  pool_server.py
tests/: conftest.py  test_acquire.py  test_compose.py  test_discovery.py  test_dispatch.py  test_efficiency.py  test_emit.py  test_emit_smoke.py  test_findings.py  test_main.py  test_mcp_server.py  test_mcp_tool_recall.py  test_orchestrate.py  test_package_boundary.py  test_pipeline.py  test_pool.py  test_prefilter.py  test_recall_bm25.py  test_recall_quality.py  test_render.py  test_router.py  test_run.py  test_runtime.py  test_select.py  test_settings.py  test_source.py
tests/api/: test_app_smoke.py  test_routes.py
tests/fixtures/: mock_catalog.json
tests/helpers/: __init__.py  scope_sandbox.py  tree.py
tests/mcp/: test_pool_server.py
