[project]
name = "agent-fleet-api"
dynamic = ["version"]
description = "FastAPI application that serves the agent fleet, the capability router, and the agent pool."
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Magic-Man-us" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "agent-fleet",
    "capabilities-discovery",
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "uvicorn[standard]>=0.30",
]

[project.urls]
Homepage = "https://github.com/Magic-Man-us/claude-sdk-agent-fleet"
Repository = "https://github.com/Magic-Man-us/claude-sdk-agent-fleet"

[project.scripts]
agent-fleet-api = "agent_fleet_api.app:main"
agent-fleet-openapi = "agent_fleet_api.schema:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# This package lives two levels below the repo root, where .git (and the tags) is.
[tool.hatch.version.raw-options]
root = "../.."
search_parent_directories = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_fleet_api"]
