[project]
name = "agent-fleet-mcp"
dynamic = ["version"]
description = "MCP server exposing the agent-fleet agent pool as tools for an orchestrating agent."
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Magic-Man-us" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "agent-fleet",
    "capdisc",
    "fastmcp>=3.4.2",
]

[project.urls]
Homepage = "https://github.com/Magic-Man-us/claude-sdk-agent-fleet"
Repository = "https://github.com/Magic-Man-us/claude-sdk-agent-fleet"

[project.scripts]
pool-mcp = "agent_fleet_mcp.pool_server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# This package lives two levels below the repo root, where .git (and the tags) is.
[tool.hatch.version.raw-options]
root = "../.."
search_parent_directories = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_fleet_mcp"]
